tests/snapshots/sanitizer__sanitize_breaking_change_emitted_when_include_body_false.snap
---
source: tests/sanitizer.rs
expression: result
---
feat!: drop v1 API

BREAKING CHANGE: v1 endpoints removed
