tests/snapshots/sanitizer__sanitize_breaking_change_include_scope_false.snap
---
source: tests/sanitizer.rs
expression: result
---
feat!: remove deprecated endpoint

BREAKING CHANGE: v1 endpoint removed
