tests/snapshots/sanitizer__sanitize_breaking_change_json_no_scope.snap
---
source: tests/sanitizer.rs
expression: result
---
feat!: drop v1 API

BREAKING CHANGE: v1 endpoints removed, migrate to /v2
