tests/snapshots/sanitizer__sanitize_breaking_change_json_with_body_and_footer.snap
---
source: tests/sanitizer.rs
expression: result
---
chore(config)!: rename timeout key

Aligns the config schema with the 2.0 release standard.

BREAKING CHANGE: config key 'timeout' renamed to 'timeout_secs', update
  your commitbee.toml
