tests/snapshots/sanitizer__sanitize_breaking_change_json_with_scope.snap
---
source: tests/sanitizer.rs
expression: result
---
feat(api)!: remove deprecated endpoint

BREAKING CHANGE: GET /api/v1/users removed, use GET /api/v2/users
  instead
