tests/snapshots/sanitizer__sanitize_json_with_body.snap
---
source: tests/sanitizer.rs
assertion_line: 47
expression: result
---
feat(llm): add streaming support

Uses tokio-stream to stream tokens from Ollama.
Improves perceived latency for long responses.
